Implement Naver Maps API

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RandomFood</string>
+    <string name="naver_client_id">yQwvCnEirmlpHCICpzIU</string>
+    <string name="naver_client_secret_id">CS8vIALW9F</string>
 </resources>
