--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RandomFood</string>
     <string name="naver_client_id">yQwvCnEirmlpHCICpzIU</string>
     <string name="naver_client_secret_id">CS8vIALW9F</string>
+    <string name="str_done">완료</string>
 </resources>
